Fix the display of diff errors in dark mode.
Diff errors had a white-on-yellow background on dark mode, due to using
a hard-coded background color and the default text color.

We now use the text-on-light color, and the warning alert color for the
background. This matches the warning alert style we use elsewhere, which
is designed to be quite noticeable on light and dark modes.

Testing Done:
Tested diff errors on both dark and light modes.

Reviewed at https://reviews.reviewboard.org/r/13879/

--- a/reviewboard/static/rb/css/pages/diffviewer.less
+++ b/reviewboard/static/rb/css/pages/diffviewer.less
@@ -71,11 +71,12 @@
 
   &.diff-error {
     td {
-      background: @diff-error-color;
+      background: var(--ink-p-accent-warning-bg);
+      color: var(--ink-p-accent-warning-fg);
       padding: 1em;
 
       a:not(.btn) {
-        color: var(--ink-p-link-fg);
+        color: var(--ink-p-link-fg-on-light);
         font-weight: bold;
       }
 
